--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,16 @@ sql_app.db
 ignore/
 alembic/
 alembic.ini
+
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+.Python
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+.venv
+pip-selfcheck.json
