--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-responsive-combo-box": "^1.3.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.7.5",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
