--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-responsive-combo-box": "^1.3.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
