--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-responsive": "^9.0.2",
     "react-responsive-combo-box": "^1.3.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
