--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-responsive": "^9.0.2",
