--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
+    "gsap": "^2.1.1",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.7.5",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
