--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ alembic/versions/
 #alembic.ini
 setupProxy.js
 Config.js
+.env.dev
 
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
