--- a/docker-compose.traefik.yml
+++ b/docker-compose.traefik.yml
@@ -16,12 +16,12 @@ services:
       - traefik.http.services.traefik-dashboard.loadbalancer.server.port=8080
       # Make Traefik use this domain in HTTP
       - traefik.http.routers.traefik-dashboard-http.entrypoints=http
-      - traefik.http.routers.traefik-dashboard-http.rule=Host(`traefik.an.dantae.net`)
+      - traefik.http.routers.traefik-dashboard-http.rule=Host(`dashboard.dantae.net`)
       # Use the traefik-public network (declared below)
       - traefik.docker.network=traefik-public
       # traefik-https the actual router using HTTPS
       - traefik.http.routers.traefik-dashboard-https.entrypoints=https
-      - traefik.http.routers.traefik-dashboard-https.rule=Host(`traefik.an.dantae.net`)
+      - traefik.http.routers.traefik-dashboard-https.rule=Host(`dashboard.dantae.net`)
       - traefik.http.routers.traefik-dashboard-https.tls=true
       # Use the "le" (Let's Encrypt) resolver created below
       - traefik.http.routers.traefik-dashboard-https.tls.certresolver=le
