backend OAuth2 implemented

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ ignore/
 #alembic/
 #alembic.ini
 setupProxy.js
+Config.js
+config.json
+.env.dev
 
 # Virtualenv
 # http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
