--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,6 +2,11 @@ FROM node:18
 
 WORKDIR /client
 
+ENV REACT_APP_RPS_USERNAME=rpsbro \
+    REACT_APP_RPS_PASSWORD=m00nintheRock! \
+    REACT_APP_RPS_BASE_SERVER_URL=https://rpsdata.dantae.net \
+    REACT_APP_RPS_BASE_WEBSOCKET_URL=wss://rpsdata.dantae.net
+
 COPY package.json /client/package.json
 RUN npm install --force
 
