change env password

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,8 +2,10 @@ FROM node:18
 
 WORKDIR /client
 
+ARG DEFAULT_RPS_PASSWORD=changethis
+
 ENV REACT_APP_RPS_USERNAME=rpsbro \
-    REACT_APP_RPS_PASSWORD=m00nintheRock! \
+    REACT_APP_RPS_PASSWORD=$DEFAULT_RPS_PASSWORD \
     REACT_APP_RPS_BASE_SERVER_URL=https://rpsdata.dantae.net \
     REACT_APP_RPS_BASE_WEBSOCKET_URL=wss://rpsdata.dantae.net
 
